@@ -42,7 +42,7 @@
 
 <addon id="metadata.filmweb.pl"
         name="Filmweb"
-        version="2.3.7"
+        version="2.3.8"
         provider-name="Regss,skupi">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
