@@ -138,16 +138,81 @@
                 <expression clear="yes">(.+)</expression>
             </RegExp>
             
+            <!-- TAGLINE !-->
+            <RegExp input="$$6" output="\1" dest="5+">
+                <!-- TMDB TAGLINE !-->
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBTaglineByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
+                    <expression clear="yes">(.+)</expression>
+                </RegExp>
+                <!-- FILMWEB TAGLINE !-->
+                <RegExp input="$$7" output="&lt;tagline&gt;\1&lt;/tagline&gt;" dest="6">
+                    <RegExp input="$$1" output="\1" dest="7">
+                        <expression fixchars="1">review--film&quot;.*?alt=&quot;([^\(]+)\s</expression>
+                    </RegExp>
+                    
+                    <expression>(.+)</expression>
+                </RegExp>
+                <expression noclean="1">(.+)</expression>
+            </RegExp>
+            
+            <!-- PLOT !-->
+            <RegExp input="$$6" output="\1" dest="5+">
+                <!-- TMDB PLOT !-->
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBLangPlotByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                    <expression clear="yes">(.+)</expression>
+                </RegExp>
+                <!-- FILMWEB PLOT !-->
+                <RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="6">
+                    <expression fixchars="1">class=&quot;filmDescriptionSection__text&quot;&gt;([^&lt;]+)&lt;</expression>
+                </RegExp>
+                <RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="6">
+                    <expression fixchars="1">class=&quot;filmDescriptionSection__moreText hide&quot;&gt;([^&lt;]+)&lt;</expression>
+                </RegExp>
+                <expression noclean="1">(.+)</expression>
+            </RegExp>
+            
+            <!-- THUMB !-->
+            <RegExp input="$$6" output="\1" dest="5+">
+                <!-- TMDB THUMB !-->
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBThumbsByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
+                    <expression clear="yes">(.+)</expression>
+                </RegExp>
+                <!-- FILMWEB THUMB !-->
+                <RegExp input="$$1" output="&lt;thumb aspect=&quot;poster&quot; preview=&quot;\12\2&quot;&gt;\13\2&lt;/thumb&gt;" dest="7">
+                    <expression clear="yes">&lt;img id=&quot;filmPoster&quot; itemprop=&quot;image&quot; content=&quot;([^\.]+\.[^\.]+\.[^\.]+\.).([^&quot;]+)&quot;</expression>
+                </RegExp>
+                <RegExp conditional="GetAlwaysTMDbThumb" input="$$7" output="\1" dest="6+">
+                    <expression noclean="1">(.+)</expression>
+                </RegExp>
+                <RegExp conditional="!GetAlwaysTMDbThumb" input="$$7" output="\1" dest="6">
+                    <expression noclean="1">(.+)</expression>
+                </RegExp>
+                <expression noclean="1">(.+)</expression>
+            </RegExp>
+            
+            <!-- FANART !-->
+            <RegExp input="$$6" output="\1" dest="5+">
+                <!-- TMDB FANART !-->
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
+                    <expression clear="yes">(.+)</expression>
+                </RegExp>
+                <!-- FILMWEB FANART
+                <RegExp input="" output="&lt;url function=&quot;FANART&quot; cache=&quot;filmweb-$$20&quot;&gt;http://www.filmweb.pl/Film?id=$$20&lt;/url&gt;" dest="6+">
+                    <expression />
+                </RegExp> !-->
+                <expression noclean="1">(.+)</expression>
+            </RegExp>
+                        
             <!-- TRAILER -->
             <RegExp conditional="GetTrailer" input="$$6" output="\1" dest="5+">
                 <!-- TMDB TRAILER !-->
                 <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
-                <!-- FILMWEB TRAILER !-->
+                <!-- FILMWEB TRAILER
                 <RegExp input="$$1" output="&lt;url function=&quot;TRAILER&quot;&gt;http://www.filmweb.pl\1&lt;/url&gt;" dest="6">
                     <expression>film-videos[^&lt;]+&lt;[^&lt;]+href=&quot;([^&quot;]+)&quot;</expression>
-                </RegExp>
+                </RegExp> !-->
                 <expression noclean="1" />
             </RegExp>
             
@@ -195,28 +260,11 @@
                     <RegExp input="$$1" output="\1" dest="7">
                         <expression noclean="1" clear="yes">gatunek(.*?)&gt;produkcja</expression>
                     </RegExp>
-                    <expression repeat="yes" fixchars="1">&gt;([^&lt;]+)&lt;\/a</expression>
+                    <expression repeat="yes" fixchars="1">&lt;a href=&quot;\/films\/search\?genres=\d+&quot;&gt;(.*?)&lt;</expression>
                 </RegExp>
                 <expression noclean="1">(.+)</expression>
             </RegExp>
-            
-            <!-- TAGLINE !-->
-            <RegExp input="$$6" output="\1" dest="5+">
-                <!-- TMDB TAGLINE !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBTaglineByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
-                    <expression clear="yes">(.+)</expression>
-                </RegExp>
-                <!-- FILMWEB TAGLINE !-->
-                <RegExp input="$$7" output="&lt;tagline&gt;\1&lt;/tagline&gt;" dest="6">
-                    <RegExp input="$$1" output="\1" dest="7">
-                        <expression fixchars="1" clear="yes">review--film&quot;.*?alt=&quot;([^\(]+)\s</expression>
-                    </RegExp>
-                    
-                    <expression>(.+)</expression>
-                </RegExp>
-                <expression noclean="1">(.+)</expression>
-            </RegExp>
-            
+
             <!-- RATING !-->
             <RegExp input="$$6" output="\1" dest="5+">
                 <!-- TMDB RATING !-->
@@ -274,76 +322,15 @@
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <!-- FILMWEB STUDIO !-->
-                <RegExp input="$$1" output="&lt;studio&gt;\4&lt;/studio&gt;" dest="6">
-                    <expression fixchars="4">&gt;studio.+?filmInfo__info&quot;&gt;([^&gt;]+)&lt;</expression>
+                <RegExp input="$$1" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="6">
+                    <expression clear="yes" fixchars="1">filmInfo__header&quot;&gt;studio.+?filmInfo__info&quot;&gt;(.*?)&lt;div class=&quot;filmInfo__group&quot;&gt;</expression>
                 </RegExp>
+                <RegExp input="$$1" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="6">
+                    <expression fixchars="1">filmInfo__header&quot;&gt;studio.+?filmInfo__info&quot;&gt;(.*?) \/ &lt;a href</expression>
+                </RegExp>                
                 <expression noclean="1">(.+)</expression>
             </RegExp>
-            
-            <!-- PLOT !-->
-            <RegExp input="$$6" output="\1" dest="5+">
-                <!-- TMDB PLOT !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBLangPlotByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
-                    <expression clear="yes">(.+)</expression>
-                </RegExp>
-                <!-- FILMWEB PLOT !-->
-                <RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="6">
-                    <expression fixchars="1">class=&quot;filmDescriptionSection__text&quot;&gt;([^&lt;]+)&lt;</expression>
-                </RegExp>
-                <RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="6">
-                    <expression fixchars="1">class=&quot;filmDescriptionSection__moreText hide&quot;&gt;([^&lt;]+)&lt;</expression>
-                </RegExp>
-                <expression noclean="1">(.+)</expression>
-            </RegExp>
-            
-            <!-- ACTORS !-->
-            <RegExp input="$$6" output="\1" dest="5+">
-                <!-- TMDB ACTORS !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBCastByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
-                    <expression clear="yes">(.+)</expression>
-                </RegExp>
-                <!-- FILMWEB ACTORS !-->
-                <RegExp input="$$7" output="\1" dest="6">
-                    <RegExp input="$$1" output="&lt;actor&gt;&lt;thumb&gt;\2.1\3&lt;/thumb&gt;&lt;name&gt;\1&lt;/name&gt;&lt;role&gt;\4&lt;/role&gt;&lt;/actor&gt;" dest="7">
-                        <expression repeat="yes" noclean="1,2,3,4" clear="yes">data-person=&quot;([^&quot;]+)&quot; data-profession=&quot;actor&quot; data-image=&quot;([^\.]+\.[^\.]+\.[^\.]+)..([^&quot;]+)&quot;.*?data-role-source&gt;([^&lt;]+)&lt;</expression>
-                    </RegExp>
-                    <expression noclean="1">(.+)</expression>
-                </RegExp>
-                <expression noclean="1">(.+)</expression>
-            </RegExp>
-            
-            <!-- THUMB !-->
-            <RegExp input="$$6" output="\1" dest="5+">
-                <!-- TMDB THUMB !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBThumbsByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
-                    <expression clear="yes">(.+)</expression>
-                </RegExp>
-                <!-- FILMWEB THUMB !-->
-                <RegExp input="$$1" output="&lt;thumb aspect=&quot;poster&quot; preview=&quot;\12\2&quot;&gt;\13\2&lt;/thumb&gt;" dest="7">
-                    <expression clear="yes">&lt;img id=&quot;filmPoster&quot; itemprop=&quot;image&quot; content=&quot;([^\.]+\.[^\.]+\.[^\.]+\.).([^&quot;]+)&quot;</expression>
-                </RegExp>
-                <RegExp conditional="GetAlwaysTMDbThumb" input="$$7" output="\1" dest="6+">
-                    <expression noclean="1">(.+)</expression>
-                </RegExp>
-                <RegExp conditional="!GetAlwaysTMDbThumb" input="$$7" output="\1" dest="6">
-                    <expression noclean="1">(.+)</expression>
-                </RegExp>
-                <expression noclean="1">(.+)</expression>
-            </RegExp>
-            
-            <!-- FANART !-->
-            <RegExp input="$$6" output="\1" dest="5+">
-                <!-- TMDB FANART !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
-                    <expression clear="yes">(.+)</expression>
-                </RegExp>
-                <!-- FILMWEB FANART !-->
-                <RegExp input="" output="&lt;url function=&quot;FANART&quot; cache=&quot;filmweb-$$20&quot;&gt;http://www.filmweb.pl/Film?id=$$20&lt;/url&gt;" dest="6+">
-                    <expression />
-                </RegExp>
-                <expression noclean="1">(.+)</expression>
-            </RegExp>
-            
+             
             <!-- SETS !-->
             <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBSetByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="5+">
                 <expression>(.+)</expression>
@@ -355,6 +342,22 @@
             </RegExp>
             
             <expression noclean="1" />
+            
+            <!-- ACTORS !-->
+            <RegExp input="$$6" output="\1" dest="5+">
+                <!-- TMDB ACTORS  !-->
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBCastByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                    <expression clear="yes">(.+)</expression>
+                </RegExp>
+                <!-- FILMWEB ACTORS  !-->
+                <RegExp input="$$7" output="&lt;actor&gt;&lt;thumb&gt;\2.1\3&lt;/thumb&gt;&lt;name&gt;\1&lt;/name&gt;&lt;role&gt;\4&lt;/role&gt;&lt;/actor&gt;" dest="6">
+                    <RegExp input="$$1" output="\1" dest="7">
+                        <expression noclean="1" clear="yes">actors&quot;&gt;Obsada(.*?)&lt;h2</expression>
+                    </RegExp>  
+                    <expression repeat="yes" fixchars="1,4">data-person=&quot;([^&quot;]+)&quot; data-profession=&quot;actor&quot; data-image=&quot;([^\.]+\.[^\.]+\.[^\.]+)..([^&quot;]+)&quot;.*?data-role-source&gt;([^&lt;]+)&lt;</expression>
+                </RegExp>
+                <expression noclean="1">(.+)</expression>
+            </RegExp>
         </RegExp>
     </GetDetailsExtended>
     
@@ -365,14 +368,14 @@
         </RegExp>
     </TMDbIDtoIMDbID>
     
-    <!-- Funkcja dodaje jeden fanart na końcu listy fanartów !-->
+    <!-- Funkcja dodaje jeden fanart na końcu listy fanartów
     <FANART clearbuffers="no" dest="3">
         <RegExp input="$$1" output="&lt;details&gt;&lt;fanart&gt;&lt;thumb preview=&quot;\1.3\2&quot;&gt;\1.1\2&lt;/thumb&gt;&lt;/fanart&gt;&lt;/details&gt;" dest="3">
             <expression clear="yes">film-photos&quot;?[^&lt;]+&lt;[^&lt;]+&lt;[^&lt;]+&lt;[^&lt;]+src=&quot;([^\.]+\.[^\.]+\.[^\.]+)\.2([^"]+)&quot;</expression>
         </RegExp>
-    </FANART>
+    </FANART> !-->
     
-    <!-- Funkcja wyszukuje trailer !-->
+    <!-- Funkcja wyszukuje trailer
     <TRAILER clearbuffers="no" dest="3">
         <RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="3">
             <RegExp input="$$4" output="&lt;trailer&gt;\1&lt;/trailer&gt;" dest="6">
@@ -407,12 +410,12 @@
                     <expression>&quot;http://www.youtube.com/v/([^&quot;]+)&quot;</expression>
                 </RegExp>
                 <expression noclean="1" clear="yes">(.+)</expression>
-            </RegExp>
-            <!-- TMDB TRAILER !-->
+            </RegExp> !-->
+            <!-- TMDB TRAILER
             <RegExp input="$$4" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;$$18::pl&lt;/chain&gt;" dest="6">
                 <expression>^$</expression>
             </RegExp>
             <expression noclean="1" />
         </RegExp>
-    </TRAILER>
+    </TRAILER> !-->
 </scraper>
